[tool.poetry]
name="negwm"
version="0.9.7"
description="negwm - brings a lot of unique UX features inspired by notion/ion3"
authors=["Neg <serg.zorg@gmail.com>"]
license="LGPL-3.0"
keywords=["negwm", "i3", "i3ipc"]

[tool.poetry.scripts]
negwm="negwm.main:NegWM.main"
audio-menu="negwm.menu.audio_menu:main"
i3-menu="negwm.menu.i3_menu:main"
props-menu="negwm.menu.props_menu:main"
winact-menu="negwm.menu.winact_menu:main"
xprop-menu="negwm.menu.xprop_menu:main"
xsettings-menu="negwm.menu.xsettings_menu:main"

[tool.hatch.version]
path = "negwm/__about__.py"

[tool.hatch.build]
pure_python=false
include=['negwm', 'negwm/lib', 'negwm/modules', 'negwm/bin']

[project.urls]
"Homepage"="https://github.com/neg-serg/negwm"
"Repository"="https://github.com/neg-serg/negwm"

[tool.poetry.dependencies]
asyncinotify='*'
docopt='*'
ewmh='*'
i3ipc='*'
psutil='*'
python='^3.10'
rich='*'
ruamel-yaml='*'

[tool.poetry.dev-dependencies]

[build-system]
requires=["poetry-core>=1.0.0"]
build-backend="poetry.core.masonry.api"
